Adding the new navbar and adding the gitignore

--- a/WebSite/views/mixology.html
+++ b/WebSite/views/mixology.html
@@ -4,16 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mixology</title>
+    <title>Hápax Mixology</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="../css/styles.css">
+
 </head>
 <body>
-    <div id="navbar">
-        <a href="../index.html"><h1>Hápax</h1></a>
-        <a href="aboutUs.html"><p>About Us</p></a>
-        <a href="ourTequila.html"><p>Our Tequila</p></a>
-        <a href="process.html"><p>Process</p></a>
-        <a href="mixology.html"><p>Mixology</p></a>
-    </div>
+    <section id="viewTitle">
+        <div id="navbar">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Hápax</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="aboutUs.html">Conócenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourTequila.html">Nuestro Tequila</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="process.html">Proceso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="mixology.html">Mixología</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
+        </div>
+        <div class="micologyBody">
+            <h1>Mixología</h1>
+        </div>
+    </section>
+    <section id="footer">
+        <div id="footer">
+            <p>logo Hápax</p>
+            <p>contact info</p>
+            <p>direction</p>
+            <p>redes sociales</p>
+        </div>
+    </section>
     <div id="body">
         <p>body</p>
     </div>
