--- a/WebSite/css/styles.css
+++ b/WebSite/css/styles.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
 }
 
+h5{
+    color: #8f8f8f;
+}
+
 p {
     color: #8f8f8f;
 }
@@ -30,12 +34,15 @@ p {
 /* Container */
 
 .color-section {
-    background-color: #f1e0c4;
+    background-color: #E2DED2;
+
+}
+.grey-section {
+    background-color: #F2F0EA;
 
 }
 .white-section {
     background-color: #fff;
-
 }
 
 /* Title */
@@ -48,6 +55,10 @@ p {
     padding: 3% 15% 7% ;
 }
 
+.container-fluid-about {
+    padding: 3% 15% 7% ;
+    text-align: left;
+}
 
 /* Navigation Bar */
 
@@ -95,6 +106,21 @@ p {
     transform:scale(1.5);
 }
 
+/* About title Image */
+
+.about-img{
+    width: 20rem;
+    transition: 1s;
+    position: absolute;
+    right:10%;
+    top: 40rem
+
+}
+
+.about-img:hover {
+    transform:scale(1.5);
+}
+
 /* Features */ 
 
 
@@ -126,7 +152,7 @@ p {
 /* testimonials */
 
 #testimonials {
-    background-color: #ef8172;
+    background-color: #F2F0EA;
 
 }
 
@@ -155,7 +181,7 @@ p {
 /* press */
 
 #press {
-    background-color: #ef8172;
+    background-color: #f1e0c4;
 
     padding-bottom: 3%;
 }
@@ -192,6 +218,7 @@ p {
 
 #footer {
     padding: 3% 15% ;
+    background-color: #fff;
 }
 
 .sm {
