Adding the process view and new type of carousel in process and aboutus view

--- a/WebSite/views/aboutUs.html
+++ b/WebSite/views/aboutUs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hápax</title>
+  <title>Hápax/Conócenos</title>
 
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div id="carouselTestimonialsControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControlsNoTouching" class="carousel carousel-dark slide" data-bs-touch="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row">
@@ -163,15 +163,15 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
             </button>
-        </div>
+          </div>
     </section>
     
     <!-- Press -->
