--- a/WebSite/views/process.html
+++ b/WebSite/views/process.html
@@ -1,56 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hápax Proceso</title>
+  <meta charset="utf-8">
+  <title>Hápax/Proceso</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Ubuntu&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/styles.css">
+  <!-- Bootstrap Scripts -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+  <!-- css Style sheets -->
+  <link rel="stylesheet" href="../css/process.css">
+
+  <!-- adding icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 </head>
+
 <body>
-    <section id="viewTitle">
-        <div id="navbar">
-            <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Hápax</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="aboutUs.html">Conócenos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ourTequila.html">Nuestro Tequila</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="process.html">Proceso</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="mixology.html">Mixología</a>
-                    </li>
-                    </ul>
-                </div>
-                </div>
-            </nav>
+  <section id="title" class="color-section">
+
+    <!-- Nav Bar -->
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-md  ">
+
+          <a class="navbar-brand" href="../index.html">HÁPAX</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item ">
+                <a class="nav-link " aria-current="page" href="aboutUs.html">Conócenos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="ourTequila.html">Nuestro Tequila</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link active" href="process.html">Proceso</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="mixology.html">Mixologia</a>
+              </li>
+            </ul>
+            <!-- Adding the search bar -->
+            <!-- <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-dark" type="submit">Search</button>
+            </form> -->
+          </div>
+
+      </nav>
+
+    <!-- Title -->
+
+    
+      <div class="row">
+        <div class="col-lg-6">
+            <h1 class="big-heading2">Proceso</h1>
         </div>
-        <div class="processBody">
-            <h1>Proceso</h1>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- About the Tequila -->
+
+  <section id="aboutTequila" class="color-section">
+    <div class="container-fluid-about">
+        <div class="col-lg-12">
+            <div class="row">
+                <div class="col-lg-6 col-Features">
+                    <h5>Our Studio</h5>
+                    <h3 class="feature-title">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <hr>
+                </div>
+                <div class="col-lg-6 col-Features">
+
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. 
+                    </p>
+                    <p>
+                        All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words.
+                    </p>
+                </div>
+            </div>
+            
+        </div>
+
+    </div>
+  </section>
+    
+    <!-- carousel / Testimonials -->
+    
+    <section id="ourTeam" class="color-section">
+        <div class="container-fluid-about2">
+            <div class="row">
+                <div class="col-lg-3">
+                    <h5>Team</h5>
+                </div>
+                <div class="col-lg-9">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1>Meet our team</h1>
+                </div>
+            </div>
+        </div>
+        <div id="carouselTestimonialsControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img class="testimonials-img" src="../assets/Test-Img/persona1.png" alt="persona-profile">
+                        </div>
+                        <div class="col-lg-6"> 
+                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+                            <em>Pebbles, New York</em>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img class="testimonials-img" src="../assets/Test-Img/persona2.png" alt="persona-profile">
+                        </div>
+                        <div class="col-lg-6"> 
+                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+                            <em>Pebbles, New York</em>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img class="testimonials-img" src="../assets/Test-Img/persona3.png" alt="persona-profile">
+                        </div>
+                        <div class="col-lg-6"> 
+                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+                            <em>Pebbles, New York</em>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
-    <section id="footer">
-        <div id="footer">
-            <p>logo Hápax</p>
-            <p>contact info</p>
-            <p>direction</p>
-            <p>redes sociales</p>
-        </div>
+    
+    <!-- Press -->
+    <!--
+    <section id="press" class="color-section">
+        
+        <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    
     </section>
+    -->
+        
+    <!-- Footer -->
+        
+    <footer id="footer" class="grey-section">
+
+    <div class="social-media">
+      <span class="material-symbols-outlined sm">
+        flutter_dash
+      </span>
+      <span class="material-symbols-outlined sm">
+        person_add
+      </span>
+      <span class="material-symbols-outlined sm">
+        photo_camera
+      </span>
+      <span class="material-symbols-outlined sm">
+        mail
+      </span>
+    </div>
+
+    <p>© Copyright Hápax All rights reserved.</p>
+
+    </footer>
+
+
 </body>
+
 </html>
