--- a/WebSite/views/process.html
+++ b/WebSite/views/process.html
@@ -69,115 +69,98 @@
 
   </section>
 
-  <!-- About the Tequila -->
+  <!-- process Section 1 -->
 
-  <section id="aboutTequila" class="color-section">
-    <div class="container-fluid-about">
-        <div class="col-lg-12">
-            <div class="row">
-                <div class="col-lg-6 col-Features">
-                    <h5>Our Studio</h5>
-                    <h3 class="feature-title">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                    </h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <hr>
-                </div>
-                <div class="col-lg-6 col-Features">
+    <section id="section1" class="color-section">
+        <div class="container-fluid-about">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-6 col-Features">
+                        <img src="../assets/Test-Img/proceso1.png" alt="proceso1" style="width: 400px;">
+                    </div>
+                    <div class="col-lg-6 col-Features">
+                        <div class="row">
+                            <h5>01.</h5>
+                        </div>
+                        <div class="row">
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <h3 class="feature-title">
+                                ART-Lorem Ipsum
+                            </h3>
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        </div>
 
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. 
-                    </p>
-                    <p>
-                        All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words.
-                    </p>
+                    </div>
                 </div>
-            </div>
             
-        </div>
+            </div>
 
-    </div>
-  </section>
-    
-    <!-- carousel / Testimonials -->
-    
-    <section id="ourTeam" class="color-section">
-        <div class="container-fluid-about2">
-            <div class="row">
-                <div class="col-lg-3">
-                    <h5>Team</h5>
-                </div>
-                <div class="col-lg-9">
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1>Meet our team</h1>
-                </div>
-            </div>
-        </div>
-        <div id="carouselTestimonialsControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img class="testimonials-img" src="../assets/Test-Img/persona1.png" alt="persona-profile">
-                        </div>
-                        <div class="col-lg-6"> 
-                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-                            <em>Pebbles, New York</em>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img class="testimonials-img" src="../assets/Test-Img/persona2.png" alt="persona-profile">
-                        </div>
-                        <div class="col-lg-6"> 
-                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-                            <em>Pebbles, New York</em>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img class="testimonials-img" src="../assets/Test-Img/persona3.png" alt="persona-profile">
-                        </div>
-                        <div class="col-lg-6"> 
-                            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-                            <em>Pebbles, New York</em>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonialsControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
     </section>
-    
-    <!-- Press -->
-    <!--
-    <section id="press" class="color-section">
-        
-        <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-    
+
+      <!-- process Section 2 -->
+
+      <section id="section1" class="grey-section">
+        <div class="container-fluid-about">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-6 col-Features">
+                        <div class="row">
+                            <h5>02.</h5>
+                        </div>
+                        <div class="row">
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <h3 class="feature-title">
+                                ART-Lorem Ipsum
+                            </h3>
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        </div>    
+                    </div>
+                    <div class="col-lg-6 col-Features">
+                        <img src="../assets/Test-Img/proceso1.png" alt="proceso1" style="width: 400px;">
+                    </div>
+                </div>
+            
+            </div>
+
+        </div>
     </section>
-    -->
+
+    
+    <!-- process Section 3 -->
+
+    <section id="section3" class="color-section">
+        <div class="container-fluid-about">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-6 col-Features">
+                        <img src="../assets/Test-Img/proceso1.png" alt="proceso1" style="width: 400px;">
+                    </div>
+                    <div class="col-lg-6 col-Features">
+                        <div class="row">
+                            <h5>03.</h5>
+                        </div>
+                        <div class="row">
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <h3 class="feature-title">
+                                ART-Lorem Ipsum
+                            </h3>
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        </div>
+
+                    </div>
+                </div>
+            
+            </div>
+
+        </div>
+    </section>
         
     <!-- Footer -->
         
