--- a/WebSite/css/styles.css
+++ b/WebSite/css/styles.css
@@ -1,183 +1,186 @@
+/* 
+    HAPAX BLACK: R: 5 G: 11 B: 23
+    GOLDEN AGAVE: R: 204 G: 153 B: 52
+    SILVER: R: 195 G: 197 B: 197
+    BLUE AGAVE: R: 0 G: 87 B: 90
+*/
 body {
-    font-family: "Montserrat";
-    text-align: center;
+  font-family: "Day Roman", sans-serif;
+  text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6{ 
-    font-family: 'Montserrat';
-    font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "HK Grotesk", sans-serif;
+  font-weight: 700;
 }
 
-h5{
-    color: #8f8f8f;
+h5 {
+  color: #8f8f8f;
 }
 
 p {
-    color: #8f8f8f;
+  color: #8f8f8f;
 }
 
 /* Headings */
 
 .big-heading {
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    margin: 5% 3% 5% 0;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  margin: 5% 3% 5% 0;
 }
 
 .section-heading {
-    font-size: 3rem;
-    line-height: 1.5;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 /* Container */
 
 .color-section {
-    background-color: #E2DED2;
-
+  background-color: rgb(204, 153, 52);
 }
 .grey-section {
-    background-color: #F2F0EA;
-
+  background-color: rgb(195, 197, 197);
 }
 .white-section {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 /* Title */
 
 #title {
-    text-align: left;
+  text-align: left;
 }
 
 .container-fluid {
-    padding: 3% 15% 7% ;
+  padding: 3% 15% 7%;
 }
 
 .container-fluid-about {
-    padding: 3% 15% 7% ;
-    text-align: left;
+  padding: 3% 15% 7%;
+  text-align: left;
 }
 
 /* Navigation Bar */
 
 .navbar {
-    padding: 0 0 4.5rem;
+  padding: 0 0 4.5rem;
 }
 
 .navbar-brand {
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-item {
-    padding: 0 20px;
+  padding: 0 20px;
 }
 
 .nav-link {
-    font-family: "montserrat";
-    font-size: 1.2rem;
-    font-weight: 300;
-    transition: 0.5s;
+  font-family: "montserrat";
+  font-size: 1.2rem;
+  font-weight: 300;
+  transition: 0.5s;
 }
 
 .nav-link:hover {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 /* Download Buttons */
 
 .btn-download {
-    margin: 5% 3% 5% 0;
+  margin: 5% 3% 5% 0;
 }
 
 /* Title Image */
 
-.title-img{
-    width: 20rem;
-    transition: 1s;
-    position: absolute;
-
+.title-img {
+  width: 20rem;
+  transition: 1s;
+  position: absolute;
 }
 
 .title-img:hover {
-    transform:scale(1.5);
+  transform: scale(1.5);
 }
 
 /* About title Image */
 
-.about-img{
-    width: 20rem;
-    transition: 1s;
-    position: absolute;
-    right:10%;
-    top: 40rem
-
+.about-img {
+  width: 20rem;
+  transition: 1s;
+  position: absolute;
+  right: 10%;
+  top: 40rem;
 }
 
 .about-img:hover {
-    transform:scale(1.5);
+  transform: scale(1.5);
 }
 
 /* Info IMG */
 
-.img1{
-    position: relative;
+.img1 {
+  position: relative;
 
-    left: -10rem;
-    top: -6rem;
-
+  left: -10rem;
+  top: -6rem;
 }
 
-.img2{
-    position: relative;
-    width: 60rem;
-    right: -10rem;
-
-
-    
+.img2 {
+  position: relative;
+  width: 60rem;
+  right: -10rem;
 }
 
-/* Features */ 
-
+/* Features */
 
 #features {
-    position: relative;
-    z-index: 1;
-    padding: 2%;
+  position: relative;
+  z-index: 1;
+  padding: 2%;
 }
 
 .feature-title {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .col-Features {
-    margin: 5% 0;
+  margin: 5% 0;
 }
 
 .icon-features {
-    color: #ef8172;
-    transform: scale(2,2);
-    margin: 1rem;
-    transition: 0.5s;
+  color: #ef8172;
+  transform: scale(2, 2);
+  margin: 1rem;
+  transition: 0.5s;
 }
 
 .icon-features:hover {
-    transform: scale(3,3);
+  transform: scale(3, 3);
 }
 
 /* testimonials */
 
 #testimonials {
-    background-color: #F2F0EA;
-
+  /* R: 0 G: 87 B: 90 */
+  background-color: rgb(0, 87, 90);
+  color: #fff;
 }
 
 .testimonial-text {
-    font-size: 3rem;
-    line-height: 1.5;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 /* #carouselTestimonialsControls {
@@ -188,76 +191,73 @@ p {
 } */
 
 .testimonials-img {
-    border-radius: 100%;
-    width: 15%;
-    padding: 20px;
+  border-radius: 100%;
+  width: 15%;
+  padding: 20px;
 }
 
 .carousel-item {
-    padding: 7% 15%;
+  padding: 7% 15%;
 }
 
 /* press */
 
 #press {
-    background-color: #f1e0c4;
+  background-color: #f1e0c4;
 
-    padding-bottom: 3%;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 20px 15px;
+  width: 15%;
+  margin: 20px 20px 15px;
 }
 
 /* pricing */
 
 #pricing {
-    padding: 100px;
-
+  padding: 100px;
 }
 
 .price-text {
-    font-size: 3rem;
-    line-height: 1.5;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-col {
-    padding: 4% 2%;
+  padding: 4% 2%;
 }
 
 /* Call to Action */
 
 #cta {
-    padding: 3% 15% ;
-
+  padding: 3% 15%;
 }
 
 /* Footer */
 
 #footer {
-    padding: 3% 15% ;
-    background-color: #fff;
+  padding: 3% 15%;
+  background-color: rgb(5, 11, 23);
 }
 
 .sm {
-    margin: 0 8px 5px;
-    color: #212121;
+  margin: 0 8px 5px;
+  color: #8f8f8f;
 }
 /* Media */
 
-@media (max-width: 1200px) {  
-    #title {
-        text-align: center;
-    }
-    
-    .title-img{
-        position: static;
-        transform: rotate(0);
-    }
+@media (max-width: 1200px) {
+  #title {
+    text-align: center;
+  }
 
-    .title-img:hover {
-        transform: rotate(0);
-    }
+  .title-img {
+    position: static;
+    transform: rotate(0);
+  }
 
+  .title-img:hover {
+    transform: rotate(0);
+  }
 }
